--- a/css/sss.css
+++ b/css/sss.css
@@ -135,7 +135,7 @@ header li:hover a{
 /* start home*/
 
 .home {
-background-image: url(/fold/landing.jpg);
+background-image: url(./fold/landing.jpg);
 height: 100vh;
 position: relative;
 background-size :cover;
@@ -423,7 +423,7 @@ flex-wrap: wrap;
     padding-bottom: var(--section-padding);
     height: 600px;
     position: relative;
-    background-image: url("/fold/design-features.jpg");
+    background-image: url(./fold/design-features.jpg);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -665,7 +665,7 @@ padding-top: 100px;
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
-    background-image: url("/fold/stats.png");
+    background-image: url(./fold/stats.png);
     background-size: cover;
     position: relative;
   }
@@ -840,7 +840,7 @@ padding-top: 100px;
 .quote {
     padding-top: 100px;
     padding-bottom:  100px;
-    background-image: url("/fold/quote.jpg");
+    background-image: url(./fold/quote.jpg);
     background-size: cover;
     position: relative;
     text-align: center;
@@ -951,7 +951,7 @@ padding-top: 100px;
 .input{
     padding-top: 100px;
     padding-bottom: 100px;
-    background-image: url(/fold/subscribe.jpg);
+    background-image: url(./fold/subscribe.jpg);
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -1133,7 +1133,7 @@ padding-top: 100px;
 footer{
     padding-top:100px;
     padding-bottom:100px;
-    background-image: url(/fold/subscribe.jpg);
+    background-image: url(./fold/subscribe.jpg);
     background-size: cover;
     position: relative;
     display: flex;
