--- a/css/sss.css
+++ b/css/sss.css
@@ -136,6 +136,7 @@ header li:hover a{
 
 .home {
   background-image: url(/landing.jpg);
+  background-image: url(/لقطة\ الشاشة\ 2022-09-03\ 142116.png);
 height: 100vh;
 position: relative;
 background-size :cover;
