--- a/css/sss.css
+++ b/css/sss.css
@@ -426,6 +426,7 @@ flex-wrap: wrap;
     height: 600px;
     position: relative;
     background-image: url(./fold/design-features.jpg);
+    background-image: url(../design-features.jpg);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -668,6 +669,7 @@ padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
     background-image: url(./fold/stats.png);
+    background-image: url(../stats.png);
     background-size: cover;
     position: relative;
   }
@@ -843,6 +845,7 @@ padding-top: 100px;
     padding-top: 100px;
     padding-bottom:  100px;
     background-image: url(./fold/quote.jpg);
+    background-image: url(../quote.jpg);
     background-size: cover;
     position: relative;
     text-align: center;
@@ -954,6 +957,7 @@ padding-top: 100px;
     padding-top: 100px;
     padding-bottom: 100px;
     background-image: url(./fold/subscribe.jpg);
+    background-image: url(../subscribe.jpg);
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -1136,6 +1140,7 @@ footer{
     padding-top:100px;
     padding-bottom:100px;
     background-image: url(./fold/subscribe.jpg);
+    background-image: url(../subscribe.jpg);
     background-size: cover;
     position: relative;
     display: flex;
