--- a/css/sss.css
+++ b/css/sss.css
@@ -63,73 +63,99 @@ ul{
 
 
 
-/* start header*/
-header{
-display: flex;
-justify-content: center;
+/* Start Header */
+header {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
 }
-
-header .container::after{
-    content: "";
-    width: 100%;
-    height: 1px;
-    background-color: #415f68;
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  min-height: 97px;
+}
+header .container::after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  background-color: #a2a2a2;
+  bottom: 0;
+  width: calc(100% - 30px);
+  left: 15px;
+}
+header .logo img {
+  height: 40px;
+}
+header nav {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+header nav .toggle-menu {
+  color: white;
+  font-size: 22px;
+}
+@media (min-width: 768px) {
+  header nav .toggle-menu {
+    display: none;
+  }
+}
+header nav ul {
+  display: flex;
+}
+@media (max-width: 767px) {
+  header nav ul {
+    display: none;
+  }
+  header nav .toggle-menu:hover + ul {
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    bottom: 0;
-}
-header .container{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   position: absolute;
-   z-index: 3;
-}
-.text-header{
-display: flex;
-}
-header .container img{
-    width: 140px;
-}
-header ul{
-display: flex;
-}
-header ul li{
-    margin-left: 40px;
-    padding: 30px 0;
-    
-}
-header ul li:hover{
-    border-bottom: #19c4f8 solid 3px;
+    top: 100%;
+    left: 0;
     width: 100%;
+    background-color: rgb(0 0 0 / 50%);
+  }
+  header nav ul li a {
+    padding: 15px !important;
+  }
 }
-header li a{
-    display: block;
-    color: white;
-    text-decoration: none;
-    font-size: 14px;
-    transition: 0.3s;
-    position: relative;
-    z-index: 2;
+header nav ul li a {
+  padding: 40px 10px;
+  display: block;
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  transition: 0.3s;
+  position: relative;
+  z-index: 2;
 }
-header li:hover a{
-    color: #19c4f8;
+header nav ul li a.active,
+header nav ul li a:hover {
+  color: var(--main-color);
+  border-bottom: 1px solid var(--main-color);
 }
-.sershe{
-    margin-left: 40px;
-    padding: 30px 0;
-    font-size: 20px;
-    z-index: 11;
-    color: white;
-    position: relative;
+header nav .form {
+  width: 40px;
+  height: 30px;
+  position: relative;
+  margin-left: 30px;
+  border-left: 1px solid white;
 }
-.sershe::after{
-    content: "";
-    width: 40px;
-    height: 30px;
-    position: relative;
-    margin-left: -40px;
-    border-left: 1px solid white;
+header nav .form i {
+  color: white;
+  position: absolute;
+  font-size: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
 }
+/* End Header */
+
 
 /* end header*/
 /* start home*/
@@ -284,6 +310,7 @@ margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 100px;
 }
 .active-text h2{
     font-weight: normal;
@@ -378,45 +405,57 @@ line-height: 1.9;
 text-align: center;
 font-weight: 500;
 }
+
 .SERVICES .bix-SERVICES{
 display: grid;
-grid-template-columns:repeat(auto-fill , minmax(500px ,1fr));
+grid-template-columns:repeat(auto-fill , minmax(200px ,1fr));
 padding: 20px;
 flex-direction: column;
 flex-wrap: wrap;
 
 }
+/* Start Services */
+.services {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+.services-container{
+  padding-bottom: 100px;
+}
+@media (min-width: 768px) {
+  .services .services-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-column-gap: 40px;
+    grid-row-gap: 60px;
 
-.SERVICES .bix-SERVICES .box-box{
+  }
+}
+.services .srv-box {
+  display: flex;
+}
+.services .srv-box i {
+  margin-right: 50px;
+}
+@media (max-width: 767px) {
+  .services .srv-box {
     display: flex;
-    justify-content: center;
-    padding: 20px;
-    margin: 20px;
-
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  .services .srv-box i {
+    margin: 0 0 30px;
+  }
 }
-.SERVICES .bix-SERVICES .box-box i{
-    font-size: 50px;
-     text-align: center;
-     margin-right: 20px;
-     margin-top: 16px;
+.services .srv-box h3 {
+  margin-bottom: 30px;
+  color: var(--main-color);
 }
-.SERVICES .bix-SERVICES .box-box .text-box{
-   padding: 10px;
-
+.services .srv-box p {
+  line-height: 2;
+  color: #777;
 }
-.SERVICES .bix-SERVICES .box-box .text-box h2{
-    margin: 10px;
-    color: var(--color-one);
-    font-size: 20px;
-    margin-bottom: 20px;
-}
-.SERVICES .bix-SERVICES .box-box .text-box p{
-    letter-spacing: 1.9;
-    text-align: start;
-    margin: 10px;
-    color: var(--color-five);
-}
-
 /* end SERVICES*/
 /* start DESIGNS*/
 
@@ -953,94 +992,86 @@ padding-top: 100px;
   /* End Pricing */
 
 /*********************** start input *********************/
-.input{
-    padding-top: 100px;
+
+/* Start Subscribe */
+.subscribe {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+ background-image: url(../subscribe.jpg);
+  background-size: cover;
+  position: relative;
+  color: white;
+  padding-top: 100px;
     padding-bottom: 100px;
-    background-image: url(./fold/subscribe.jpg);
-    background-image: url(../subscribe.jpg);
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
 }
-.input::before{
-    content: "";
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    background-color: rgb(0 0 0 / 50%);
-    
+.subscribe::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 50%);
 }
-
-
-
-
-
-.input .container{
-    position: relative;
-    display: flex;
-    align-items: center;
-    
+.subscribe .container {
+  position: relative;
+  display: flex;
+  align-items: center;
 }
-
-
-.input form{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    width:500px;
-    max-width: 100%;
-    
-
+@media (max-width: 991px) {
+  .subscribe .container {
+    flex-direction: column;
+  }
 }
-
-
-
-
-.input form input[type="email"]{
-    border: 1px solid white;
-    border-right: none;
-    background: none;
-    padding: 20px 20px 20px 60px;
-    width: calc(100%  -50px);
+.subscribe form {
+  display: flex;
+  position: relative;
+  width: 500px;
+  max-width: 100%;
 }
-
-
-
-
-.submit{
-    width: fit-content;
-    border: 1px solid white;
-    border-left: none;
-    background-color: #19c4f8;
-    color: white;
-    padding: 20px 20px 20px 20px;
-
+.subscribe form i {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 25px;
 }
-
-.input form i{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 40px;
-    color: #ffffff;  
-    font-size: 20px;  
-
+.subscribe form input[type="email"] {
+  border: 1px solid white;
+  border-right: none;
+  background: none;
+  padding: 20px 20px 20px 60px;
+  caret-color: var(--main-color);
+  width: calc(100% - 130px);
 }
-.input form i:focus{
-    height: 50px;
+.subscribe form input[type="submit"] {
+  width: 130px;
+  background-color: var(--main-color);
+  color: white;
+  padding: 10px 20px;
+  border: 1px solid white;
+  border-left: none;
+  text-transform: uppercase;
 }
+.subscribe form input[type="email"]:focus,
+.subscribe form input[type="submit"]:focus {
+  outline: none;
+}
+.subscribe form ::placeholder {
+  color: white;
+}
+.subscribe p {
+  line-height: 2;
+  margin-left: 50px;
+}
+@media (max-width: 991px) {
+  .subscribe p {
+    margin: 30px 0 0;
+  }
+}
+/* End Subscribe */
 
 
-.input p{
-    color: white;
-    margin: 30px;
-    max-width: fit-content;
-    line-height: 1.9;
-}
+
 
 
 
